# apple-mail-mcp

./: .gitignore  README.md  pyproject.toml
src/apple_mail_mcp/: __init__.py  gmail.py  server.py
src/apple_mail_mcp/applescript/: __init__.py  escape.py  executor.py  scripts.py
src/apple_mail_mcp/tools/: __init__.py  accounts.py  mailboxes.py  messages.py  operations.py
